# FeatherVibe

./: CMakeLists.txt  README.md
include/node/: node.hpp
include/style/: style_variant.hpp  stylesheet.hpp  stylesheet_segment.hpp
include/style/types/: style_setting.hpp
include/types/: rgba.hpp
src/: main.cpp
src/node/: node.cpp
src/style/: stylesheet.cpp
